<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:clipToPadding="true"
    >
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     >
<LinearLayout
    android:id="@+id/tv_location"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<ImageView
    android:id="@+id/imag_add_address"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@mipmap/a7x"
    />
    <TextView
        android:id="@+id/tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="地址"
        />
</LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="70dp">
<ImageView
    android:layout_marginTop="5dp"
    android:layout_marginLeft="15dp"
    android:id="@+id/iv_tem"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@mipmap/uj"
    />
        <ImageView
            android:paddingTop="5dp"
            android:layout_marginLeft="5dp"
            android:id="@+id/iv_tem_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/a_0"/>
        <ImageView
            android:paddingTop="5dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/iv_tem_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/a_0"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:weightSum="3">

            <ImageView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/vw"
                />
            <View
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                />
            <!--android:src="@drawable/aln"-->
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:weightSum="3">

            <TextView
                android:id="@+id/tv_type"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="多云"
                />
            <View
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                />
            <!--android:src="@drawable/aln"-->
        </LinearLayout>
        <ImageView
            android:id="@+id/iv_type_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/as9"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@android:color/white"
            android:id="@+id/tv_temp_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30"
            />

        <TextView
            android:textColor="@android:color/white"
            android:layout_marginLeft="15dp"
            android:id="@+id/tv_temp_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_wind_fx"
            />
        <TextView
            android:textColor="@android:color/white"
            android:id="@+id/tv_temp_wind_fx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="东南风"
            />
        <TextView
            android:textColor="@android:color/white"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temp_wind_fl"
            />
        <TextView
            android:textColor="@android:color/white"
            android:id="@+id/tv_temp_fl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30级"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@android:color/white"
            android:text="@string/aqi_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textColor="@android:color/white"
            android:id="@+id/tv_aqi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="15dp"
            android:textColor="@android:color/white"
          android:text="@string/aqi_pm25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
        android:textColor="@android:color/white"
        android:id="@+id/tv_pm25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="15dp"
            android:textColor="@android:color/white"
            android:text="@string/shidu_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <TextView
        android:textColor="@android:color/white"
        android:id="@+id/tv_shidu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
        android:textColor="@android:color/white"
        android:id="@+id/tv_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
 </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>